--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -46,10 +46,11 @@ body {
 
 body {
     font-family: 'Playfair Display', serif;
-    // font-family: 'Gilroy';
+    // font-family: 'Gilroy', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
+    color: #000;
 }
 
 .container {
