--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,8 +2,62 @@
 @import 'global';
 @import 'fonts';
 
+// start header
+
+.header__inner {
+    padding: 25px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__map {
+    font-family: 'Gilroy', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    padding-left: 28px;
+    position: relative;
+    margin-left: 90px;
+    margin-right: auto;
+
+    &::before {
+        position: absolute;
+        content: "";
+        width: 14px;
+        height: 20px;
+        background-image: url(../images/icons/map-marker.png);
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
+
+.header__phone {
+    font-weight: 700;
+    font-size: 18px;
+    color: #000;
+    margin-right: 30px;
+}
+
+.default__btn {
+    font-family: 'Gilroy',sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 22px;
+    color: #ffffff;
+    padding: 9px;
+    width: 165px;
+    box-shadow: 0px 5px 13px 0px rgba(228, 4, 4, 0.3);
+    background-image: linear-gradient( 155deg, rgb(255,9,9) 0%, rgb(255,65,21) 41%, rgb(255,106,71) 43%, rgb(255,9,9) 99%);
+    text-align: center;
+    border-radius: 20px;
+}
+
+// end header
 
 
 
+  
 
 @import 'media';
