--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,6 +20,7 @@
     position: relative;
     margin-left: 90px;
     margin-right: auto;
+    color: #000;
 
     &::before {
         position: absolute;
@@ -56,6 +57,152 @@
 
 // end header
 
+// start main
+
+.main__top {
+    background-color: #3a5896;
+    padding: 40px 0;
+    text-align: center;
+    color: #ffffff;
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: "";
+        border: 40px solid transparent; 
+        border-top: 40px solid #3a5896;
+        bottom: -80px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    &-title {
+        font-weight: 700;
+        font-size: 50px;
+        line-height: 52px;
+        margin-bottom: 15px;
+    }
+
+    &-subtitle {
+        font-size: 30px;
+        line-height: 36px;
+        font-weight: 700;
+    }
+}
+
+.main__slider {
+    background-image: url(../images/main-slider-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    min-height: 430px;
+}
+
+.main__slider-inner {
+    padding: 125px 0 135px;
+    max-width: 750px;
+    margin: 0 auto;
+
+    .slick-arrow {
+        font-size: 0;
+        background-color: transparent;
+        border: none;
+        width: 15px;
+        height: 26px;
+        background-image: url(../images/icons/left-arrow.png);
+        outline: none;
+        cursor: pointer;
+        position: absolute;
+        top: 45%;
+        transform: translateY(-50%);
+        z-index: 1;
+    }
+
+    .slick-next {
+        right: 0;
+        background-image: url(../images/icons/right-arrow.png);
+    }
+
+    .slick-prev {
+        left: 0;
+    }
+
+    .slick-dots {
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 30px;
+
+        li {
+            display: inline-block;
+            font-size: 0;
+            background-color: transparent;
+            border: none;
+
+            & + li {
+                margin-left: 10px;
+            }
+
+            button {
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background-color: #cccccc;
+                border: none;
+                outline: none;
+                cursor: pointer;
+            }
+
+            &.slick-active {
+
+                button {
+                    background-color: #3a5896;
+                }
+            }
+        }
+    }
+}
+
+.main__slider-item {
+    text-align: center;
+}
+
+.main__slider-title {
+    font-weight: 700;
+    font-style: italic;
+    font-size: 26px;
+    line-height: 36px;
+    max-width: 290px;
+    width: 100%;
+    margin: 0 auto 40px;
+}
+
+.main__slider-box {
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: "";
+        background-image: url(../images/content/man.png);
+        width: 305px;
+        height: 480px;
+        bottom: -18px;
+        left: -15px;
+    }
+
+    &::after {
+        width: 904px;
+        height: 644px;
+        position: absolute;
+        content: "";
+        background-image: url(../images/content/calc.png);
+        bottom: -274px;
+        right: -390px;
+    }
+}
+
+// end main
 
 
   
