--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -204,6 +204,160 @@
 
 // end main
 
+// start instruction
+
+.instruction__inner {
+    padding: 100px 0;
+    display: flex;
+    align-items: center;
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: "";
+        width: 487px;
+        height: 521px;
+        background-image: url(../images/content/pig.png);
+        left: 47%;
+        transform: translateX(-50%);
+        bottom: -215px;
+    }
+}
+
+.instruction__content {
+    max-width: 436px;
+    width: 100%;
+    margin-left: 100px;
+    margin-right: 68px;
+}
+
+.instruction__title {
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 85px;
+}
+
+.instruction__text {
+    font-style: italic;
+    font-size: 20px;
+    line-height: 27px;
+    max-width: 320px;
+    width: 100%;
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: "";
+        width: 40px;
+        height: 50px;
+        background-image: url(../images/icons/question.png);
+        left: -60px;
+        top: -45px;
+    }
+
+    &::after {
+        position: absolute;
+        content: "";
+        width: 78px;
+        height: 78px;
+        background-image: url(../images/icons/ellipse.png);
+        left: -47px;
+        top: -35px;
+        z-index: -1;
+    }
+
+    span {
+        font-weight: 700;
+    }
+}
+
+.instruction__form {
+    border: 8px solid #3a5896;
+    padding: 40px 50px;
+    max-width: 420px;
+    width: 100%;
+    text-align: center;
+
+    form {
+        width: 100%;
+
+        input[type="tel"] {
+            height: 55px;
+            width: 225px;
+            border: 1px solid #e8e8e8;
+            border-radius: 20px;
+            outline: none;
+            padding: 0 20px;
+            font-family: 'Gilroy', sans-serif;
+            margin-bottom: 15px;
+
+            &::placeholder {
+                text-align: center;
+                font-family: 'Gilroy', sans-serif;
+                font-weight: 300;
+                font-size: 13px;
+                color: #999999;
+            }
+        }
+
+        button {
+            border: none;
+            outline: none;
+            width: 225px;
+            height: 55px;
+            font-size: 14px;
+            cursor: pointer;
+            margin-bottom: 25px;
+        }
+
+        label {
+            font-size: 11px;
+            line-height: 22px;
+            color: #999999;
+            font-family: 'Gilroy', sans-serif;
+            font-weight: 300;
+            position: relative;
+            padding-left: 19px;
+
+            a {
+                color: #999999;
+                text-decoration: underline;
+            }
+
+            input[type="checkbox"] {
+                cursor: pointer;
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+        }
+    }
+
+    &-title {
+        font-weight: 700;
+        font-size: 22px;
+        margin-bottom: 15px;
+    }
+
+    &-subtitle {
+        font-style: italic;
+        margin-bottom: 25px;
+    }
+
+    &-subtext {
+        font-size: 13px;
+        font-family: 'Gilroy', sans-serif;
+        font-weight: 300;
+        line-height: 22px;
+        margin-bottom: 10px;
+    }
+}
+
+
+// end instruction
 
   
 
