added section procedure

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -61,4 +61,11 @@ body {
     padding: 0 15px;
 }
 
+.title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 40px;
+    text-align: center;
+}
+
 
