--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -356,9 +356,96 @@
     }
 }
 
-
 // end instruction
 
-  
+// start procedure
+
+.procedure {
+    background-color: #f5f5f5;
+    padding: 90px 0;
+
+    &__title {
+        margin-bottom: 30px;
+    }
+
+    &__subtitle {
+        color: #3a5896;
+        font-weight: 700;
+        font-style: italic;
+        font-size: 30px;
+        text-align: center;
+        margin-bottom: 200px;
+    }
+
+    &__inner {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    &__item {
+        max-width: 485px;
+        width: 100%;
+        margin-bottom: 160px;
+        font-size: 18px;
+        line-height: 26px;
+        font-style: italic;
+        padding-left: 150px;
+        position: relative;
+
+        &::before {
+            position: absolute;
+            content: "";
+            width: 164px;
+            height: 179px;
+            background-image: url(../images/content/procedure-item-1.png);
+            left: 0;
+            top: -120px;
+        }
+
+        span {
+            font-weight: 700;
+        }
+
+        &-document {
+            max-width: 420px;
+
+            &::before {
+                background-image: url(../images/content/procedure-item-2.png);
+                width: 176px;
+                height: 164px;
+            }
+        }
+
+        &-garant {
+            max-width: 420px;
+            margin-bottom: 0;
+
+            &::before {
+                background-image: url(../images/content/procedure-item-3.png);
+                width: 165px;
+                height: 177px;
+            }
+        }
+
+        &-finance {
+            max-width: 420px;
+            margin-bottom: 0;
+
+            &::before {
+                background-image: url(../images/content/procedure-item-4.png);
+                width: 239px;
+                height: 169px;
+            }
+
+            span {
+                display: block;
+            }
+        }
+    }
+}
+
+// end procedure
+
 
 @import 'media';
