--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -68,6 +68,20 @@ body {
     text-align: center;
 }
 
+.default__btn {
+    font-family: 'Gilroy',sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 22px;
+    color: #ffffff;
+    padding: 9px;
+    width: 165px;
+    box-shadow: 0px 5px 13px 0px rgba(228, 4, 4, 0.3);
+    background-image: linear-gradient( 155deg, rgb(255,9,9) 0%, rgb(255,65,21) 41%, rgb(255,106,71) 43%, rgb(255,9,9) 99%);
+    text-align: center;
+    border-radius: 20px;
+}
+
 .default__form {
     border: 8px solid #3a5896;
     padding: 40px 50px;
