--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -41,20 +41,6 @@
     margin-right: 30px;
 }
 
-.default__btn {
-    font-family: 'Gilroy',sans-serif;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 22px;
-    color: #ffffff;
-    padding: 9px;
-    width: 165px;
-    box-shadow: 0px 5px 13px 0px rgba(228, 4, 4, 0.3);
-    background-image: linear-gradient( 155deg, rgb(255,9,9) 0%, rgb(255,65,21) 41%, rgb(255,106,71) 43%, rgb(255,9,9) 99%);
-    text-align: center;
-    border-radius: 20px;
-}
-
 // end header
 
 // start main
@@ -466,5 +452,107 @@
 }
 
 // end advantages
+
+// start time
+
+.time {
+    padding: 100px 0;
+
+    &__title {
+        margin-bottom: 20px;
+        position: relative;
+
+        &::before {
+            position: absolute;
+            content: "";
+            width: 492px;
+            height: 497px;
+            background-image: url(../images/content/book.png);
+            left: -310px;
+            top: -203px;
+        }
+    }
+
+    &__subtitle {
+        max-width: 555px;
+        width: 100%;
+        margin: 0 auto 85px;
+        font-weight: 700;
+        font-style: italic;
+        font-size: 30px;
+        color: #3a5896;
+        line-height: 43px;
+        text-align: center;
+    }
+
+    &__inner {
+        max-width: 765px;
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    &__item {
+        flex-basis: 25%;
+        margin-bottom: 60px;
+    }
+}
+
+.time__slider-inner {
+    position: relative;
+
+    .slick-arrow {
+        position: absolute;
+        font-size: 0;
+        background-color: transparent;
+        border: none;
+        background-image: url(../images/icons/time-left-arrow.png);
+        width: 21px;
+        height: 40px;
+        outline: none;
+        cursor: pointer;
+        top: 30%;
+        transform: translateY(-50%);
+        z-index: 1;
+    }
+
+    .slick-next {
+        background-image: url(../images/icons/time-right-arrow.png);
+        right: 0;
+    }
+}
+
+.time__slider-title {
+    font-weight: 700;
+    font-style: italic;
+    font-size: 28px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.time__slider-text {
+    font-size: 20px;
+    line-height: 29px;
+    font-family: 'Gilroy', sans-serif;
+    font-weight: 300;
+    max-width: 780px;
+    width: 100%;
+    margin: 0 auto 55px;
+    text-align: center;
+}
+
+.time__slider-btn {
+    width: 300px;
+    font-size: 14px;
+    padding: 21px;
+    border-radius: 30px;
+    outline: none;
+    display: block;
+    margin: 0 auto;
+}
+
+// end time
 
 @import 'media';
