--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -555,4 +555,76 @@
 
 // end time
 
+// start experience
+
+.experience {
+    background-color: #f5f5f5;
+    padding: 90px 0 100px;
+
+    &__title {
+        margin-bottom: 20px;
+    }
+
+    &__subtitle {
+        font-size: 30px;
+        line-height: 43px;
+        color: #3a5896;
+        font-weight: 700;
+        font-style: italic;
+        text-align: center;
+        margin-bottom: 70px;
+    }
+
+    &__slider {
+        position: relative;
+        
+        &-inner {
+            max-width: 945px;
+            width: 100%;
+            margin: 0 auto;
+            position: static;
+        }
+
+        .slick-arrow {
+            position: absolute;
+            font-size: 0;
+            background-color: transparent;
+            border: none;
+            background-image: url(../images/icons/time-left-arrow.png);
+            width: 21px;
+            height: 40px;
+            outline: none;
+            cursor: pointer;
+            top: 40%;
+            transform: translateY(-50%);
+            z-index: 1;
+            left: 0;
+        }
+
+        .slick-next {
+            background-image: url(../images/icons/time-right-arrow.png);
+            right: 0;
+            left: auto;
+        }
+    }
+}
+
+.experience__item {
+    position: relative;
+    transition: all .3s;
+    z-index: 2;
+
+    img {
+        width: 100%;
+    }
+
+    &:hover {
+        transform: scale(1.5);
+    }
+}
+
+// end experience
+
 @import 'media';
+
+  
