--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -661,6 +661,107 @@
 
 // end guarantee
 
+// start footer
+
+.footer__contacts {
+    background-image: url(../images/footer-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    min-height: 536px;
+
+    &-inner {
+        background-image: url(../images/title-bg.png);
+        background-repeat: no-repeat;
+        background-position: center top;
+        padding-top: 75px;
+        position: relative;
+        text-align: center;
+        min-height: 408px;
+    }
+
+    &-title {
+        text-align: center;
+        font-size: 22px;
+        line-height: 32px;
+        color: #3a5896;
+        font-style: italic;
+        font-weight: 700;
+        max-width: 255px;
+        width: 100%;
+        margin: 0 auto 30px;
+    }
+
+    &-adress {
+        font-family: 'Gilroy', sans-serif;
+        font-weight: 300;
+        color: #000;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+    &-phone {
+        font-size: 14px;
+        font-family: 'Gilroy', sans-serif;
+        font-weight: 500;
+        color: #000;
+    }
+}
+
+.footer__form {
+    background-color: #fff;
+    border: none;
+    max-width: 810px;
+    width: 100%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: -228px;
+    box-shadow: 0px 17px 54px 0px rgba(0, 0, 0, 0.06);
+
+    &-inner {
+        display: flex;
+        justify-content: space-between;
+
+        .default__form-subtitle {
+            max-width: 195px;
+            width: 100%;
+        }
+    }
+}
+
+.footer__copy {
+    background-color: #fbfbfb;
+    padding: 125px 0 30px;
+
+    &-inner {
+        max-width: 810px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &-text {
+        max-width: 144px;
+        width: 100%;
+        font-family: 'Gilroy', sans-serif;
+        font-weight: 300;
+        font-size: 14px;
+    }
+
+    &-phone {
+        font-weight: 700;
+        font-size: 18px;
+        color: #000;
+    }
+}
+
+// end footer
+
 @import 'media';
+
 
   
